fixed mac spacing

--- a/src/styles/mac.css
+++ b/src/styles/mac.css
@@ -3,15 +3,15 @@
 }
 
 #searchLabelRestaurant {
-    margin-right: 20.3px;
+    margin-right: 20.29px;
 }
 
 #searchLabelMeetup {
-    margin-right: 42.08px;
+    margin-right: 40.54px;
 }
 
 #searchLabelConcert {
-    margin-right: 39.76px;
+    margin-right: 37.95px;
 }
 
 /* the only difference between this and main.css is the margin-right size
